--- a/job-portal/src/app/shared/components/footer/footer.component.html
+++ b/job-portal/src/app/shared/components/footer/footer.component.html
@@ -1,5 +1,8 @@
-<div class="footer">
+<footer class="footer">
   <div class="img-wrapper">
     <img src="assets/images/logo-gold.png" alt="logo" />
   </div>
-</div>
+  <p class="white-txt text-2xl md:text-2xl">
+    &copy; All rights reserved by Iconic
+  </p>
+</footer>
