--- a/job-portal/src/theme/variables.scss
+++ b/job-portal/src/theme/variables.scss
@@ -2,4 +2,5 @@
     --primary-color: #002D62;
     --secondary-color: #72A0C1;
     --tertiary-color: #bf9b30;
+    --default-background: #FAF9F6;
 }
