--- a/job-portal/src/app/app.component.html
+++ b/job-portal/src/app/app.component.html
@@ -1,3 +1,8 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="flex flex-col h-screen justify-between main">
+  <div>
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+  </div>
+
+  <app-footer></app-footer>
+</div>
