initilize the design of application form

--- a/job-portal/src/app/modules/applicant/application-form/application-form.component.scss
+++ b/job-portal/src/app/modules/applicant/application-form/application-form.component.scss
@@ -4,3 +4,13 @@
     justify-content: center;
     height: 100%;
 }
+
+.submit{
+    display: flex;
+    justify-content: flex-end;
+    padding-block: 14px;
+    button{
+        background-color: var(--primary-color);
+    }
+
+}
