--- a/job-portal/src/app/shared/components/footer/footer.component.html
+++ b/job-portal/src/app/shared/components/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="img-wrapper">
     <img src="assets/images/logo-gold.png" alt="logo" />
   </div>
-  <p class="white-txt text-2xl md:text-2xl">
+  <p class="text-white text-2xl md:text-2xl">
     &copy; All rights reserved by Iconic
   </p>
 </footer>
