--- a/job-portal/src/app/modules/applicant/application-form/application-form.component.html
+++ b/job-portal/src/app/modules/applicant/application-form/application-form.component.html
@@ -1,115 +1,114 @@
 <div class="container">
-  <form class="w-full max-w-lg content-center">
+  <form
+    class="w-full max-w-lg bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4"
+    [formGroup]="applicationForm"
+    (ngSubmit)="submitApplication()"
+  >
     <div class="flex flex-wrap -mx-3 mb-6">
-      <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+      <div
+        *ngFor="let input of formHalfLenInputs"
+        class="w-full md:w-1/2 px-3 mb-6 md:mb-0"
+      >
         <label
-          class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
+          class="block tracking-wide text-xs font-bold mb-2"
           for="grid-first-name"
         >
-          First Name
+          {{ input }}
         </label>
         <input
-          class="appearance-none block w-full bg-gray-200 text-gray-700 border border-red-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
-          id="grid-first-name"
-          type="text"
-          placeholder="Jane"
-        />
-        <p class="text-red-500 text-xs italic">Please fill out this field.</p>
-      </div>
-      <div class="w-full md:w-1/2 px-3">
-        <label
-          class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
-          for="grid-last-name"
-        >
-          Last Name
-        </label>
-        <input
-          class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
           id="grid-last-name"
           type="text"
+          [formControlName]="input"
           placeholder="Doe"
         />
-      </div>
-    </div>
-    <div class="flex flex-wrap -mx-3 mb-6">
-      <div class="w-full px-3">
-        <label
-          class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
-          for="grid-password"
+        <p
+          class="text-red-500 text-xs italic"
+          *ngIf="
+            applicationForm.controls[input].touched &&
+            applicationForm.controls[input].hasError('required')
+          "
         >
-          Password
-        </label>
-        <input
-          class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-          id="grid-password"
-          type="password"
-          placeholder="******************"
-        />
-        <p class="text-gray-600 text-xs italic">
-          Make it as long and as crazy as you'd like
+          Please fill out this field.
         </p>
       </div>
     </div>
-    <div class="flex flex-wrap -mx-3 mb-2">
-      <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
+
+    <div
+      *ngFor="let input of formFullLenInputs"
+      class="flex flex-wrap -mx-3 mb-6"
+    >
+      <div class="w-full px-3">
         <label
-          class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
-          for="grid-city"
+          class="block tracking-wide text-gray-700 text-xs font-bold mb-2"
+          for="grid-password"
         >
-          City
+          {{ input }}
         </label>
         <input
-          class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-          id="grid-city"
-          type="text"
-          placeholder="Albuquerque"
+          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+          [type]="input"
+          [id]="input"
+          [formControlName]="input"
+          placeholder="Enter {{ input }}"
         />
       </div>
-      <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
-        <label
-          class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
-          for="grid-state"
-        >
-          State
-        </label>
-        <div class="relative">
-          <select
-            class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-            id="grid-state"
-          >
-            <option>New Mexico</option>
-            <option>Missouri</option>
-            <option>Texas</option>
-          </select>
-          <div
-            class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700"
-          >
-            <svg
-              class="fill-current h-4 w-4"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 20 20"
-            >
-              <path
-                d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
-              />
-            </svg>
-          </div>
-        </div>
-      </div>
-      <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
-        <label
-          class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
-          for="grid-zip"
-        >
-          Zip
-        </label>
-        <input
-          class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-          id="grid-zip"
-          type="text"
-          placeholder="90210"
-        />
-      </div>
+      <p
+        class="text-red-500 text-xs italic"
+        *ngIf="
+          applicationForm.controls[input].touched &&
+          applicationForm.controls[input].hasError('required')
+        "
+      >
+        Please fill out this field.
+      </p>
+    </div>
+
+    <label
+      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+      for="file_input"
+      >Upload file</label
+    >
+    <input
+      class="block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
+      aria-describedby="file_input_help"
+      id="file_input"
+      type="file"
+      formControlName="file"
+      (change)="onFileChange($event)"
+    />
+    <p
+      class="mt-1 text-sm text-gray-500 dark:text-gray-300"
+      id="file_input_help"
+    >
+      SVG, PNG, JPG or GIF (MAX. 800x400px).
+    </p>
+
+    <label
+      for="countries"
+      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+      >Select Desired Job</label
+    >
+    <select
+      id="countries"
+      formControlName="jobId"
+      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+    >
+      <option selected>Choose a country</option>
+      <option value="US">United States</option>
+      <option value="CA">Canada</option>
+      <option value="FR">France</option>
+      <option value="DE">Germany</option>
+    </select>
+
+    <div class="submit">
+      <button
+        type="submit"
+        class="text-white font-medium rounded-lg text-sm px-5 py-2.5 text-center"
+        [disabled]="!applicationForm.valid"
+      >
+        Submit
+      </button>
     </div>
   </form>
 </div>
