--- a/job-portal/src/app/shared/components/header/header.component.html
+++ b/job-portal/src/app/shared/components/header/header.component.html
@@ -2,5 +2,5 @@
   <div class="img-wrapper">
     <img src="assets/images/logo.png" alt="logo" />
   </div>
-  <p class="white-txt text-2xl md:text-4xl">Join Our Team</p>
+  <p class="text-white text-2xl md:text-4xl">Join Our Team</p>
 </div>
