--- a/job-portal/src/theme/variables.scss
+++ b/job-portal/src/theme/variables.scss
@@ -3,4 +3,7 @@
     --secondary-color: #72A0C1;
     --tertiary-color: #bf9b30;
     --default-background: #FAF9F6;
+    --danger-color: #df4759;
+    --warning-color: #ffc409;
+    --success-color: #2dd36f;
 }
