--- a/job-portal/src/app/modules/applicant/application-form/application-form.component.scss
+++ b/job-portal/src/app/modules/applicant/application-form/application-form.component.scss
@@ -14,3 +14,27 @@
     }
 
 }
+
+.fileContainer {
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+    background-color: var(--primary-color);
+    border-radius: 4px;
+    margin-block: 1rem;
+    padding: .8rem;
+}
+
+.fileContainer [type=file] {
+    cursor: inherit;
+    display: block;
+    font-size: 999px;
+    filter: alpha(opacity=0);
+    min-height: 100%;
+    min-width: 100%;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    text-align: right;
+    top: 0;
+}
