--- a/job-portal/src/theme/global.scss
+++ b/job-portal/src/theme/global.scss
@@ -7,6 +7,11 @@ body{
 }
 
 .remove-btn{
-    height: 2.4rem;
-    width: 2.4rem;
+    height: 1.6rem;
+    width: 1.6rem;
 }
+
+.required:after {
+    content:" *";
+    color: var(--danger-color);
+  }
