--- a/job-portal/src/app/modules/applicant/application-form/application-form.component.scss
+++ b/job-portal/src/app/modules/applicant/application-form/application-form.component.scss
@@ -21,7 +21,7 @@
     cursor: pointer;
     background-color: var(--primary-color);
     border-radius: 4px;
-    margin-block: 1rem;
+    margin-top: 1rem;
     padding: .8rem;
 }
 
