save uploaded resume

--- a/job-portal/src/app/modules/applicant/application-form/application-form.component.html
+++ b/job-portal/src/app/modules/applicant/application-form/application-form.component.html
@@ -154,7 +154,7 @@
     <div class="submit">
       <button
         type="submit"
-        class="text-white text-xs font-bold px-5 py-2.5 text-center"
+        class="text-white text-xs font-bold px-5 py-2.5 text-center btn"
         [disabled]="!applicationForm.valid"
       >
         {{ "action.submit" | translate }}
