--- a/job-portal/src/app/shared/components/header/header.component.html
+++ b/job-portal/src/app/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header" *ngIf="showHeader">
   <div class="img-wrapper">
     <img src="assets/images/logo.png" alt="logo" />
   </div>
