--- a/job-portal/src/app/app.component.html
+++ b/job-portal/src/app/app.component.html
@@ -1,7 +1,10 @@
 <div class="flex flex-col h-screen justify-between main">
   <div>
     <app-header></app-header>
-    <router-outlet></router-outlet>
+    <div class="content">
+      <router-outlet></router-outlet>
+      <app-side-menu></app-side-menu>
+    </div>
   </div>
 
   <app-footer></app-footer>
